# bruno

./: .env.crewai  .env.example  .gitignore  .pre-commit-config.yaml  BRUNO_CHAT_INTEGRATION_EXPLAINED.md  BRUNO_MODEL_DEPLOYMENT_OPTIONS.md  CLAUDE.md  CLOUD_GPU_STATUS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATES.md  ERROR_HANDLING_ANALYSIS_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION.md  HOW_TO_USE_BRUNO_MODEL.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INNOVATIVE_IMPROVEMENTS.md  LESSONS_LEARNED.md  Modelfile.backend  Modelfile.bruno  Modelfile.bruno-7b  Modelfile.devops  Modelfile.docs  Modelfile.frontend  Modelfile.orchestrator  Modelfile.security  Modelfile.test  NEXT_LEVEL_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  RUNBOOK.md  RUNPOD_32B_PLAN.md  RUNPOD_STATUS.md  WORKFLOW.md  config.32b.toml  config.default.toml  docker-compose.yml  download_model.sh  frontend_config.toml  heretic_study.db  (+15 more)
.agents/: heretic-assistant.ts
.github/workflows/: codeql.yml  lint.yml  test.yml
claudedocs/: ACCESSIBLE_NAMING_OPTIONS.md  BRUNO_MIGRATION_PLAN.md  BRUNO_NAMING_EXPLORATION.md  C4_STREAMING.md  ERROR_HANDLING_ANALYSIS.md  HERETIC_WORKFLOW_DIAGRAM.md  PROJECT_NAMING_EXPLORATION.md  REFINED_NAMING_OPTIONS.md  cache_error_handling.md
configs/: README.md  config-qwen32b.toml  devops-3b.toml  docs-3b.toml  orchestrator-14b.toml  security-3b.toml
docs/: AI_AGENT_SWARM_RESEARCH.md  ARCHITECTURE.md  EXPANSION_OPPORTUNITIES.md  FEATURE_ROADMAP.md  IMPLEMENTATION_PLAN.md  MOONLIGHT_ABLITERATION_PLAN.md  README.md  STREAMING_OPPORTUNITIES.md
docs/archive/: GPU_PCA_IMPLEMENTATION.md  PCA_OPTIMIZATION_PLAN.md
examples/: README.md  chat_app.py  chat_endpoint.py  monitor_app.py  seven_agent_swarm.py
experiments/code_refusal/: README.md  REPLICATION_PROMPT.md  bad_code_prompts.json  config.code_refusal.toml  create_datasets.py  good_code_prompts.json  test_comparison.py  test_setup.py
experiments/code_verbosity/: test_baseline.py
experiments/hedging/: load_local_dataset.py
experiments/verbosity/: README.md  comparison_results.json  concise_prompts.json  config.verbosity.toml  eval_verbosity.py  test_comparison.py  test_comparison_4bit.py  verbose_prompts.json
experiments/verbosity_v2/: comparison_results.json  test_comparison_4bit.py
scripts/: README.md  benchmark_compare.py  compare-models.ps1  convert-to-gguf.ps1  create_collections.py  download-model.ps1  generate_checksums.py  monitor_a100.ps1  patch_heretic.py  remote_setup.sh  runpod.ps1  setup-pod.sh  setup_pod.sh  setup_runpod_a100.md  setup_runpod_a100.ps1  start-abliteration.ps1  start_abliteration.sh  test-on-cloud.ps1  test_model.py  update_model_cards.py  upload_and_run.sh  verify_checksums.py  visualize_study.py
scripts/moonlight/: benchmark_moonlight.py  dpo_train_moonlight.py
src/bruno/: __init__.py  benchmarks.py  chat.py  cli.py  config.default.toml  config.py  constants.py  error_tracker.py  errors.py  evaluator.py  exceptions.py  feature_tracker.py  logging.py  main.py  model.py  progress.py  summary.py  swarm.py  transfer.py  utils.py  validation.py  vast.py
src/heretic/: __init__.py  config.py  constants.py  error_tracker.py  evaluator.py  exceptions.py  logging.py  main.py  model.py  transfer.py  utils.py  validation.py  vast.py
tests/: conftest.py
tests/integration/: __init__.py  test_abliteration_pipeline.py
tests/unit/: test_chat.py  test_config.py  test_config_validators.py  (+15 more)
(+27 files in other folders)
