[project]
name = "bruno-ai"
version = "2.0.0"
description = "Neural behavior engineering framework through activation direction analysis"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" },
    { name = "quanticsoul4772", email = "quanticsoul4772@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.13"
keywords = ["llm", "transformer", "abliteration", "neural", "behavior", "alignment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "ddgs>=9.10.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "numpy>=1.24.0",  # Required for contrastive PCA
    "scikit-learn>=1.3.0",  # Required for supervised probing and concept cones
    "optuna>=4.5.0",
    "pydantic-settings>=2.10.1",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "transformers>=4.48.0",  # 4.48.2 required for Moonlight-16B, 4.55+ for other models
    "click>=8.1.8",  # Match ddgs requirement
    "fabric>=3.2.0",
    # PyTorch with CUDA support (platform-specific)
    "torch>=2.8.0",
]

[project.optional-dependencies]
swarm = ["crewai>=0.86.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/quanticsoul4772/bruno"
Documentation = "https://github.com/quanticsoul4772/bruno"
Repository = "https://github.com/quanticsoul4772/bruno.git"
Issues = "https://github.com/quanticsoul4772/bruno/issues"
Changelog = "https://github.com/quanticsoul4772/bruno/commits/master/"
Original = "https://github.com/p-e-w/heretic"

[project.scripts]
bruno = "bruno.cli:cli"
bruno-vast = "bruno.vast:main"
bruno-swarm = "bruno.swarm:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bruno"
data-files = { "bruno" = ["config.default.toml"] }

# PyTorch CUDA index configuration
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/bruno --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.ruff]
# Exclude external vendored code from linting
exclude = [
    "tools/",
    "experiments/",
]

[tool.ruff.lint]
# Enable import sorting
extend-select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
# Start with low threshold until more tests are added
# Target: 70% coverage after completing IMPLEMENTATION_PLAN.md Task 1.1
fail_under = 10
